syntax = "proto3";

package com.qtglobal.practicaltest;

option java_package = "com.qtglobal.practicaltest.proto";
option java_outer_classname = "EmailMessageProto";

message EmailMessage {
  string sender_name = 1;
  string sender_email_address = 2;
  string subject = 3;
  string body = 4;
  bytes attached_image = 5; // raw image bytes
  string body_hash = 6; // SHA-256 hash of 'body'
  string image_hash = 7; // SHA-256 hash of image bytes
}

